--- a/app/views/dataset_collections/_filled_dataset_collection.html.erb
+++ b/app/views/dataset_collections/_filled_dataset_collection.html.erb
@@ -4,7 +4,6 @@
 						<tr>
 							<th>Titre</th>
 							<th>Source</th>
-							<th>Téléchargement</th>
 							<th>Supprimer</th>
 						</tr>
 					</thead>
@@ -18,11 +17,8 @@
 							</td>
 							<td>
 								<span class="badge badge--2 mr-4">
-								<i class="bg-blue"></i><%= link_to "Source ", dataset.db_link, class: "text-dark" %>
+								<i class="bg-blue"></i><%= link_to "Lien vers la base de données", dataset.db_link, class: "text-dark" %>
 								</span>
-							</td>
-							<td>
-								<%= button_to "Download .gif", root_path, class: "btn btn-styled btn-round btn-md border border-dark" %>
 							</td>
 							<td>
 							 	<%= link_to user_dataset_collection_path(dataset: dataset), method: :delete, class: "text-right pl-4" do %>
