fix: delete with icon

--- a/app/views/dataset_collections/_filled_dataset_collection.html.erb
+++ b/app/views/dataset_collections/_filled_dataset_collection.html.erb
@@ -21,10 +21,11 @@
 								</span>
 							</td>
 							<td>
-<%= link_to 'Destroy', user_dataset_collection_path(dataset: dataset), method: :delete, :remote => true, :class => 'delete_data_set' %>
+							 	<%= link_to user_dataset_collection_path(dataset: dataset), method: :delete, :remote => true, :class => 'delete_data_set' do %>
+                                 <i class="ion-trash-a"></i>
+								<% end %>
 							</td>
 							</tr>
 						<% end %>
 					</tbody>
 				</table>
-<%= link_to 'Destroy', user_dataset_collection_path, method: :delete, data: { confirm: 'Are you sure?' }, :remote => true, :class => 'delete_data_set' %>
