--- a/app/views/topics/_dataset.html.erb
+++ b/app/views/topics/_dataset.html.erb
@@ -10,18 +10,18 @@
                 <li><div class="col-1 text-right">
                     <span class="card-title badge badge-md badge-secondary text-right align-top">Base de données</span>
                 </div></li>
-								<% if user_signed_in? %>
-									<li>
-										<div class='card-icon-actions text-right col-2 align-top'>
-												<% active_css = (@user_dataset_collection.include?(dataset) ? "active" : "") %>
-												<%= link_to user_dataset_collection_path(current_user, :dataset => dataset), method: :post, class: "favorite #{active_css}" do %><i class="fa fa-star"></i><% end %>
-										</div>
-									</li>
-								<% end %>
+                <% if user_signed_in? %>
+                    <li>
+                        <div class='card-icon-actions text-right col-2 align-top'>
+                            <% active_css = (@user_dataset_collection.include?(dataset) ? "active" : "") %>
+                            <%= link_to user_dataset_collection_path(current_user, :dataset => dataset), method: :post, class: "favorite #{active_css}" do %><i class="fa fa-star"></i><% end %>
+                        </div>
+                    </li>
+                <% end %>
             </ul>    
         </div>
         <p class="card-text"> <%= dataset.description %> </p>
-        <%= button_to "Source", dataset.db_link , class: "btn btn-styled btn-sm btn-green" %>
+        <%= button_to "Source", dataset.db_link, class: "btn btn-styled btn-sm btn-green", form: {target: '_blank'}  %>
     </div>
     <% if (dataset.dpsir_category == "Driver" && dataset.rendered) %>
         <iframe class="w-100" height="700" src="<%= dataset.db_link %>" frameBorder="0"></iframe>
