add: show pollution indice

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -5,6 +5,9 @@
 </head>
 
 <body>
+    <div class="container">
+       Indice la pollution de l'air à Marseille: <%= @test %>/100
+    </div>
     <section class="bg-base-5 slice sct-color-1">
         <div class="container">
             <div class="row align-items-center">
