fix: name variable

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -6,7 +6,7 @@
 
 <body>
     <div class="container">
-       Indice la pollution de l'air à Marseille: <%= @test %>/100
+       Indice la pollution de l'air à Marseille: <%= @marseille_indice %>/100
     </div>
     <section class="bg-base-5 slice sct-color-1">
         <div class="container">
