--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -7,6 +7,8 @@
 <body>
     <div class="container">
        Indice la pollution de l'air à Marseille: <%= @marseille_indice %>/100
+       Indice la pollution de l'air à Toulon: <%= @toulon_indice %>/100 
+       Indice la pollution de l'air à Nice: <%= @nice_indice %>/100 
     </div>
     <section class="bg-base-5 slice sct-color-1">
         <div class="container">
