--- a/app/views/topics/_topic-index-banner.html.erb
+++ b/app/views/topics/_topic-index-banner.html.erb
@@ -6,15 +6,28 @@
                 <div class="row py-5">
                     <div class="col-lg-12 col-md-8">
                         <h1 class="heading heading-inverse heading-1 strong-400 text-normal">
-                            La Qualité de l'Air en Provence par l'Open Data
+                        La Qualité de l'Air en Provence par l'Open Data
                         </h1>
-
                         <span class="clearfix"></span>
-
                         <div class="lead c-gray-lighter mt-3 mb-3">
                             Votre revue pour comprendre les données publiques sur la qualité de l'air
                         </div>
-
+                        <div class="lead c-gray-lighter mt-3 mb-3">
+                            L'indice de la qualité de l'air en temps réel
+                        </div>
+                        <div class="container text-danger">
+                            <div class="row">
+                                <div class="col-sm">
+                                    Marseille: <%= @marseille_indice %>/100
+                                </div>
+                                <div class="col-sm">
+                                    Toulon: <%= @toulon_indice %>/100
+                                </div>
+                                <div class="col-sm">
+                                    Nice: <%= @nice_indice %>/100
+                                </div>
+                            </div>
+                        </div>
                         <span class="short-delimiter--style-1 mb-4"></span>
                     </div>
                 </div>
