--- a/app/views/dataset_collections/_filled_dataset_collection.html.erb
+++ b/app/views/dataset_collections/_filled_dataset_collection.html.erb
@@ -17,7 +17,7 @@
 							</td>
 							<td>
 								<span class="badge badge--2 mr-4">
-								<i class="bg-blue"></i><%= link_to "Lien vers la base de données", dataset.db_link, class: "text-dark" %>
+								<i class="bg-blue"></i><%= link_to "Lien vers la base de données", dataset.db_link, class: "text-dark", target: :_blank %>
 								</span>
 							</td>
 							<td>
