--- a/app/views/topics/_other_articles.html.erb
+++ b/app/views/topics/_other_articles.html.erb
@@ -31,7 +31,7 @@
                 <div class="col text-right text-xs-right">
                     <ul class="heading heading-sm strong-400 text-muted mt-0 mb-0">
                         <li>
-                            Temps de lecture: <%= Random.rand(5..30) %> min
+                            Temps de lecture: <%= topic.reading_time %> min
                         </li>
                     </ul>
                 </div>
