--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 <%= render :partial => "devise/registrations/edit_registration_form_fields", :locals => { :f => f } %>
-<div class="row align-items-center">
+<br><br>
+<div class="row align-items-center mb-4">
 	<div class="col-md-12 text-right d-flex justify-content-around">
 		<%= f.submit "Sauvegarder", class: "btn btn-styled btn-round btn-base-1" %>
 		<% end %>
