--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer id="footer" class="footer footer-inverse fixed-bottom">
+<footer id="footer" class="footer footer-inverse">
     <div class="footer-bottom py-4">
         <div class="container">
             <div class="row cols-xs-space col-sm-space align-items-center">
