fix: add accent on E on editer

--- a/app/views/devise/registrations/_edit_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_edit_registration_form_fields.html.erb
@@ -10,7 +10,7 @@
                     </div>
                     <div class="form-body">
                         <div class="text-center px-2">
-                            <h4 class="heading heading-4 strong-400 mb-4">Editer mon compte</h4>
+                            <h4 class="heading heading-4 strong-400 mb-4">Éditer mon compte</h4>
                         </div>
                         <div class="col-12">
                             <div class="form-group">
