--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -11,9 +11,6 @@
               <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air" %><br>
               <br>
             </div>
-            <div class="form-header-icon">
-              <i class="icon ion-log-in"></i>
-            </div>
           </div>
           <div class="form-body">
             <div class="section-title section-title--style-2 text-center mb-2">
@@ -27,7 +24,7 @@
                   <div class="form-group">
                     <%= f.label :password, "Nouveau mot de passe" %><br />
                                             <% if @minimum_password_length %>
-                                              <em>(<%= @minimum_password_length %> caractères minimum)</em><br />
+                                              <small class="font-italic">(<%= @minimum_password_length %> caractères minimum)</small><br />
                                             <% end %><br />
                     <div class="input-group input-groupe--style-1">
                       <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control form-control-lg" %>
