--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,50 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-<div class="col-3 mx-auto my-5">
-<div class="card p-3 align-items-center">
-  <div class="field">
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Votre email" %>
-  </div>
+<section class="slice-lg has-bg-cover bg-size-cover">
+  <div id="top" class="container">
+    <div class="row justify-content-center cols-xs-space">
+      <div class="col-lg-6">
+        <div class="form-card form-card--style-2 z-depth-2-top">
+          <div class="form-header text-center">
+            <div>
+              <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air" %><br>
+              <br>
+            </div>
+          </div>
+          <div class="form-body">
+            <div class="section-title section-title--style-2 text-center mb-2">
+              <h4 class="section-title-inner heading-2 strong-400 text-dark">
+              <span>Retrouvez votre compte</span>
+              </h4>
+            </div>
+            <form class="form-default" role="form">
+              <div class="row">
+                <div class="col-12">
+                  <div class="form-group">
+                    <div class="input-group input-groupe--style-1">
+                      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Votre email" %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                </div>
+              </div>
+              <div class="row align-items-center">
+                  <%= f.submit "Envoyer", class: "btn btn-styled btn-lg btn-block btn-base-1 mt-4"%>
+              </div>
+              <% end %>
+              <%= render "devise/shared/links" %>
 
-  <div class="actions">
-    <%= f.submit "Envoyer", class: "btn btn-styled btn-base-1"  %>
+            </form>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-<% end %>
-</div>
-<%= render "devise/shared/links" %>
-</div>
+</section>
+
+
+
