--- a/app/views/dataset_collections/show.html.erb
+++ b/app/views/dataset_collections/show.html.erb
@@ -2,15 +2,14 @@
 	<div class="main-content">
 
 		<!-- Order history table -->
+		<h1 class="text-center">Bienvenue dans votre librairie</h1>
 		<div class="card no-border">
 			<div>
-<% if (@datasets.length > 0) %>
-<%= render "filled_dataset_collection" %>
-<% else %>
-<%= render "empty_dataset_collection" %>
-<% end %>
-
-
+				<% if (@datasets.length > 0) %>
+					<%= render "filled_dataset_collection" %>
+				<% else %>
+					<%= render "empty_dataset_collection" %>
+				<% end %>
 			</div>
 		</div>
 	</div>
