refactor: change index title : sujets => Nos articles, add space above _dataset button

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-6">
-                    <h3 class="heading heading-6 strong-600 text-uppercase mb-0">Sujets</h3>
+                    <h3 class="heading heading-6 strong-600 text-uppercase mb-0">Nos articles</h3>
                 </div>
             </div>
             <span class="space-xs-lg"></span>
