--- a/app/views/topics/_dataset.html.erb
+++ b/app/views/topics/_dataset.html.erb
@@ -21,7 +21,7 @@
             </ul>    
         </div>
         <p class="card-text"> <%= dataset.description %> </p>
-        <%= button_to "Lien vers la base de données", dataset.db_link, class: "btn btn-styled btn btn-primary", form: {target: '_blank'}  %>
+        <%= button_to "Lien vers la base de données", dataset.db_link, class: "btn btn-styled btn btn-primary mt-5 mb-3", form: {target: '_blank'}  %>
     </div>
     <% if dataset.rendered %>
         <iframe class="w-100" height="700" src="<%= dataset.db_link %>" frameBorder="0"></iframe>
