fix: twitter account link

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -46,7 +46,7 @@
                                 <%end%>
                             </li>
                             <li>
-                                <%= link_to "https://twitter.com/lab_in_the_air?lang=en", target: "_blank" do %>
+                                <%= link_to "https://twitter.com/OpenAir82434106", target: "_blank" do %>
                                 <i class="fa fa-twitter"></i>
                                 <%end%>
                             </li>
