fix: conditionnal display of related topics

--- a/app/views/topics/_other_articles.html.erb
+++ b/app/views/topics/_other_articles.html.erb
@@ -3,6 +3,7 @@
     <h3 class="heading heading-6 strong-600 text-uppercase mb-4">Autres articles</h3>
 </div>
 <div class="card-deck">
+	<% if (@related_topics_size > 0) %>
     <% related_topics.each do |topic| %>
     <div class="col-lg-4 mb-5">
         <div class="card z-depth-2-top h-auto">
@@ -39,4 +40,5 @@
         </div>
     </div>
     <% end %>
+	<% end %>
 </div>
