--- a/app/views/topics/_other_articles.html.erb
+++ b/app/views/topics/_other_articles.html.erb
@@ -5,40 +5,39 @@
 <div class="card-deck">
 	<% if (@related_topics_size > 0) %>
     <% related_topics.each do |topic| %>
-    <div class="col-lg-4 mb-5">
-        <div class="card z-depth-2-top h-auto">
-            <div class="card-image">
-                <div class="view view-first">
-                    <a href="/topics/<%=topic.id%>">
-                        <%= image_tag topic.main_picture.variant(resize: "1000x760!") %>
-                    </a>
-                </div>
-            </div>
-            <div class="card-body h-25">
-                <h3 class="heading heading-5 strong-600 mb-0">
-                <a href="/topics/<%=topic.id%>">
-                <%=topic.title%></a>
-                </h3>
-            </div>
-            <div class="card-footer">
-                <div class="row">
-                    <div class="col">
-                        <div class="block-author">
-                            <div class="author-info">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col text-right text-xs-right">
-                    <ul class="heading heading-sm strong-400 text-muted mt-0 mb-0">
-                        <li>
-                            Temps de lecture : <%= topic.reading_time %> min
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+			<div class="col-lg-4 mb-5">
+					<div class="card z-depth-2-top h-auto">
+							<div class="card-image">
+									<div class="view view-first">
+											<%= link_to topic_path(topic) do %>
+													<%= image_tag topic.main_picture.variant(resize: "1000x760!") %>
+											<% end %>
+									</div>
+							</div>
+							<div class="card-body h-25">
+									<h3 class="heading heading-5 strong-600 mb-0">
+									<%= link_to topic.title, topic_path(topic) %>
+									</h3>
+							</div>
+							<div class="card-footer">
+									<div class="row">
+											<div class="col">
+													<div class="block-author">
+															<div class="author-info">
+															</div>
+													</div>
+											</div>
+									</div>
+									<div class="col text-right text-xs-right">
+											<ul class="heading heading-sm strong-400 text-muted mt-0 mb-0">
+													<li>
+															Temps de lecture : <%= topic.reading_time %> min
+													</li>
+											</ul>
+									</div>
+							</div>
+					</div>
+			</div>
     <% end %>
 	<% end %>
 </div>
