fix: correct enpty dataset_collection partial text

--- a/app/views/dataset_collections/_empty_dataset_collection.html.erb
+++ b/app/views/dataset_collections/_empty_dataset_collection.html.erb
@@ -1,3 +1,4 @@
 <div class="mx-auto my-5">
-		<p class="text-center">Cette page regroupe les données que vous aurez sélectionné depuis la page d'un article. Vous n'avez pour l'instant encore aucun jeu de données enregistré. Vous pouvez le faire depuis la page d'un article, accessible depuis <%= link_to "la page d'accueil", root_path %>, en cliquand sur le symbole <i class="fa fa-star"></i> affiché sur un jeu de données.</p>
+		<p class="text-center"> Votre librairie permet de garder en mémoire les bases de données qui vous intéressent. Elle est vide pour l'instant.  Vous pouvez ajouter une base de données depuis la page d'un article, en cliquant sur le symbole <i class="fa fa-star"></i> affiché dans le coin en haut à droite de son encart. Tous les articles sont accessibles depuis <%= link_to "la page d'accueil", root_path %>.</p>
 </div>
+ 
