--- a/app/views/devise/registrations/_new_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_new_registration_form_fields.html.erb
@@ -8,6 +8,7 @@
                             <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air" %>
                         
                     </div>
+                     <%= render "devise/shared/error_messages", resource: resource %>
                     <div class="form-body">
                         
                             <div class="section-title section-title--style-2 text-center mb-2">
