--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,15 +1,18 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
+  <div id="">
     <h2>
-      <%= I18n.t("errors.messages.not_saved",
+      <% I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
     </h2>
-    <ul>
+    
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <div  id="inner-message-success" class="alert alert-success" role="alert">
+        <%= message %>
+      </div>
       <% end %>
-    </ul>
+    
   </div>
 <% end %>
+
