fix: show alerts msg in edit user view

--- a/app/views/devise/registrations/_edit_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_edit_registration_form_fields.html.erb
@@ -8,6 +8,7 @@
                             <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air" %>
                         
                     </div>
+                     <%= render "devise/shared/error_messages", resource: resource %>
                     <div class="form-body">
                         <div class="text-center px-2">
                             <h4 class="heading heading-4 strong-400 mb-4">Éditer mon compte</h4>
