fix: remove tooltip when favorite dataset is add (js)

--- a/app/views/dataset_collections/create.js.erb
+++ b/app/views/dataset_collections/create.js.erb
@@ -2,7 +2,8 @@ $('.create_data_set').bind('ajax:success', function(){
       
 
 $(this).addClass("active"); // add class
-
+ 
+$('.tooltip').remove(); 
 
 });  
 
