--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,6 +5,8 @@
        <li class="list-group-item d-flex justify-content-between align-items-center">
           Nom: <%= user.last_name %> <br> 
           Prénom: <%= user.first_name %> 
+          Mail: <%= user.email %> 
+          <%= link_to 'Update', admin_user_path(user), method: :edit %>
           <%= link_to 'Destroy', admin_user_path(user), method: :delete %>
 <% end %>
 </li>
