--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,3 @@
-<div id="mapid"></div>
 <section id="top" class="slice-lg sct-color-1">
     <div class="container text-center">
         <div class="row">
@@ -133,6 +132,11 @@
                         plus contraignantes, 71 % de la population est concernée par au moins un dépassement des teneurs
                         en
                     NOx ou en PM10.</p>
+                    <figure>
+                        <figcaption>NO2 : moyenne annuelle (2017). Unité : microgramme par mètre-cube (µg/m3). Source : AtmoSud 
+                        </figcaption>
+                        <div id="mapid"></div>
+                    </figure>
                     <br><hr>
                 </div>
             </div>
