--- a/app/views/topics/_topic_card.html.erb
+++ b/app/views/topics/_topic_card.html.erb
@@ -21,7 +21,7 @@
                         <div class="author-info">
                             <div class="author-name">
                                 <%= link_to topic_path(topic, anchor: "top") do %>
-                                <%=topic.short_description%>
+                                <%=topic.short_description.html_safe%>
                                 <% end %>
                             </div>
                         </div>
