fix: rm navbar in layout

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+                    <div class="st-content-inner">
+              <%= render "layouts/navbar" %>
+              <!-- Header -->
+              <%= render "topics/topic-index-banner" %>
+                </div>
     </head>
     <body>
         <section class="bg-base-5 slice sct-color-1">
