--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,5 @@
-<section id="top" class="slice sct-color-1">
+   <section class="bg-base-5 slice sct-color-1">
+                <div class="bg-base-5 container">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
@@ -39,5 +40,9 @@
             </div>
         </div>
     </div>
-</section>
+
 <%= render partial: "other_articles", locals: {related_topics: @related_topics} %>
+
+</div>
+
+              </section>
