--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,48 +1,52 @@
-   <section class="bg-base-5 slice sct-color-1">
-                <div class="bg-base-5 container">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="section-title section-title--style-1 text-center mb-4">
-                    <h2 class="section-title-inner heading-1 strong-400">
-                    <span>
-                    <%=@topic.title.html_safe%></span>
-                    </h2>
-                </div>
-            </div>
-        </div>
-        <br><br><br><br>
-        <div class="row">
-            <div class="col-sm-9">
-                <div class="block block-post">
-                    <div class="container-fluid">
-                        <div class="text-center">
-                            <%= image_tag @topic.main_picture, class: "w-100 img-responsive rounded" %>
-                        </div>
-                    </div>
-                    <div class="block-body block-post-body">
-                        <p class="text-justify">
-                            <%=@topic.short_description.html_safe%>
-                        </p>
-                    </div>
-                    <br><br><br>
-                    <%= render partial: "dpsir_category_section", locals: {category_section: 'driver_section', category_section_title: @topic.driver_section_title, category_section_intro: @topic.driver_section_intro, category_datasets: @driver_datasets } %>
-                    <%= render partial: "dpsir_category_section", locals: {category_section: 'pressure_section', category_section_title: @topic.pressure_section_title, category_section_intro: @topic.pressure_section_intro, category_datasets: @pressure_datasets } %>
-                    <%= render partial: "dpsir_category_section", locals: {category_section: 'state_section', category_section_title: @topic.state_section_title, category_section_intro: @topic.state_section_intro, category_datasets: @state_datasets } %>
-                    <%= render partial: "dpsir_category_section", locals: {category_section: 'impact_section', category_section_title: @topic.impact_section_title, category_section_intro: @topic.impact_section_intro, category_datasets: @impact_datasets } %>
-                    <%= render partial: "dpsir_category_section", locals: {category_section: 'response_section', category_section_title: @topic.response_section_title, category_section_intro: @topic.response_section_intro, category_datasets: @response_datasets } %>
-                    
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <!-- SIDEBAR MENU -->
-                <%= render partial: "topic_sidebar_menu", locals: {topic: @topic} %>
-            </div>
-        </div>
+<head>
+    <div class="st-content-inner">
+        <%= render "layouts/navbar" %>
+        <!-- Header -->
+        <%= render "layouts/index_banner" %>
     </div>
-
-<%= render partial: "other_articles", locals: {related_topics: @related_topics} %>
-
-</div>
-
-              </section>
+</head>
+<section class="bg-base-5 slice sct-color-1">
+    <div class="bg-base-5 container">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section-title section-title--style-1 text-center mb-4">
+                        <h2 class="section-title-inner heading-1 strong-400">
+                        <span>
+                        <%=@topic.title.html_safe%></span>
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <br><br><br><br>
+            <div class="row">
+                <div class="col-sm-9">
+                    <div class="block block-post">
+                        <div class="container-fluid">
+                            <div class="text-center">
+                                <%= image_tag @topic.main_picture, class: "w-100 img-responsive rounded" %>
+                            </div>
+                        </div>
+                        <div class="block-body block-post-body">
+                            <p class="text-justify">
+                                <%=@topic.short_description.html_safe%>
+                            </p>
+                        </div>
+                        <br><br><br>
+                        <%= render partial: "dpsir_category_section", locals: {category_section: 'driver_section', category_section_title: @topic.driver_section_title, category_section_intro: @topic.driver_section_intro, category_datasets: @driver_datasets } %>
+                        <%= render partial: "dpsir_category_section", locals: {category_section: 'pressure_section', category_section_title: @topic.pressure_section_title, category_section_intro: @topic.pressure_section_intro, category_datasets: @pressure_datasets } %>
+                        <%= render partial: "dpsir_category_section", locals: {category_section: 'state_section', category_section_title: @topic.state_section_title, category_section_intro: @topic.state_section_intro, category_datasets: @state_datasets } %>
+                        <%= render partial: "dpsir_category_section", locals: {category_section: 'impact_section', category_section_title: @topic.impact_section_title, category_section_intro: @topic.impact_section_intro, category_datasets: @impact_datasets } %>
+                        <%= render partial: "dpsir_category_section", locals: {category_section: 'response_section', category_section_title: @topic.response_section_title, category_section_intro: @topic.response_section_intro, category_datasets: @response_datasets } %>
+                        
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <!-- SIDEBAR MENU -->
+                    <%= render partial: "topic_sidebar_menu", locals: {topic: @topic} %>
+                </div>
+            </div>
+        </div>
+        <%= render partial: "other_articles", locals: {related_topics: @related_topics} %>
+    </div>
+</section>
