--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-                    <div class="st-content-inner">
-              <%= render "layouts/navbar" %>
-              <!-- Header -->
-              <%= render "topics/topic-index-banner" %>
-                </div>
+        <div class="st-content-inner">
+            <%= render "layouts/navbar" %>
+            <!-- Header -->
+            <%= render "topics/topic-index-banner" %>
+        </div>
     </head>
     <body>
         <section class="bg-base-5 slice sct-color-1">
@@ -23,5 +23,8 @@
                 </div>
             </div>
         </section>
+        <a href="#" class="back-to-top btn-back-to-top"></a>
+        <%= render "layouts/footer" %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
     </body>
 </html>
