fix: alerte msg in views

--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,4 +1,5 @@
-<div id="message">
+<div  id="message" class="toast" style="position: absolute; top: 0; right: 1%;">
+
   <% if notice %>
   <br>
   <div  id="inner-message-success" class="alert alert-success" role="alert">
@@ -11,4 +12,6 @@
     <%= alert %>
   </div>
   <% end %>
+
+
 </div>
