fix: alerte style

--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,4 +1,4 @@
-<div  id="message" class="toast" style="position: absolute; top: 0; right: 1%;">
+<div  id="message" class="toast" style="position: absolute; top: 1%; right: 2%;">
 
   <% if notice %>
   <br>
