fix: turbolink in application layout and footer and navbar in about page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -22,7 +22,7 @@
                             </li>
                             <% end %>
                             <li>
-                                <%= link_to "À propos", page_path('about', anchor: "top") %>
+                                <%= link_to "À propos", page_path('about') %>
                             </li>
                             <li>
                                 <%= mail_to "open-air@alabintheair.cc" do %>
