--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,9 @@
-<section id="top" class="slice-lg sct-color-1">
+    <div class="st-content-inner">
+        <%= render "layouts/navbar" %>
+        <!-- Header -->
+        <%= render "layouts/index_banner" %>
+    </div>
+<section class="slice-lg sct-color-1">
     <div class="container text-center">
         <div class="row">
             <div class="col-md-12">
@@ -142,4 +147,7 @@
             </div>
         </div>
     </div>
+            <a href="#" class="back-to-top btn-back-to-top"></a>
+        <%= render "layouts/footer" %>
+      
 </section>
