--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,5 +22,5 @@
   <%= yield %>
 
   <%= render 'layouts/flash' %>
-
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
 </html>
