add: new devise registration view

--- a/app/views/devise/registrations/_new_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_new_registration_form_fields.html.erb
@@ -1,5 +1,5 @@
-<section class="slice-lg has-bg-cover bg-size-cover">
-    <div id="top" class="container">
+<body class="slice-lg has-bg-cover bg-size-cover" style="background-image: url(<%= asset_path('air-quality-banner/background1.jpg')%>); background-repeat: no-repeat; background-size: cover; background-position: center;">
+    <section id="top" class="container">
         <div class="row justify-content-center cols-xs-space">
             <div class="col-lg-7">
                 <div class="form-card form-card--style-2 z-depth-2-top">
