--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,116 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<body class="slice-lg has-bg-cover bg-size-cover" style="background-image: url(<%= asset_path('air-quality-banner/background1.jpg')%>); background-repeat: no-repeat; background-size: cover; background-position: center;">
+	<%= render "devise/shared/error_messages", resource: resource %>
+	<section id="top" class="container">
+		<div class="row justify-content-center cols-xs-space">
+			<div class="col-lg-7">
+				<div class="form-card form-card--style-2 z-depth-2-top">
+					<div class="form-header text-center">
+						
+						<%= link_to root_path do %>
+						<%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air", class:"mb-3" %>
+						<% end %>
+						
+					</div>
+					
+					<div class="form-body">
+						
+						<div class="section-title section-title--style-2 text-center mb-2">
+							<h4 class="section-title-inner heading-2 strong-400">
+							<span>Créer un compte</span>
+							</h4>
+						</div>
+						
+						<div class="col-8">
+							<div class="form-group">
+								<%= f.label :Prénom %><br />
+								<div class="input-group input-group--style-1">
+									<%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "Prénom" %>
+								</div>
+							</div>
+						</div>
+						
+						
+						
+						<div class="col-8">
+							<div class="form-group">
+								<%= f.label :Nom %><br />
+								<div class="input-group input-group--style-1">
+									<%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control form-control-lg", placeholder: "Nom" %>
+								</div>
+							</div>
+						</div>
+						<div class="col-12">
+							<div class="form-group">
+								<%= f.label :Email %><br />
+								<div class="input-group input-group--style-1">
+									<%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-lg", placeholder: "Email" %>
+								</div>
+							</div>
+						</div>
+						
+						
+						<div class="col-12">
+							<div class="form-group">
+								<%= f.label :Mot_de_passe %>
+								<% if @minimum_password_length %>
+								<small class="font-italic">(<%= @minimum_password_length %> caractères minimum)</small>
+								<% end %><br />
+								<div class="input-group input-group--style-1">
+									<%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Mot de passe" %>
+								</div>
+							</div>
+						</div>
+						
+						<div class="col-12">
+							<div class="form-group">
+								<%= f.label :confirmer_le_mot_de_passe %><br />
+								<div class="input-group input-group--style-1">
+									<%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Confirmer le mot de passe" %>
+								</div>
+							</div>
+						</div>
+						
+						<div class="col-12">
+							<%= render "devise/shared/links" %>
+						</div>
+						<div class="form-group">
+							<div class="col-md-12 text-right text-right">
+								<%= f.submit "Inscription", class: "btn btn-styled btn-base-1" %>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			        <div class="col-4 align-self-center">
+          <div>
 
-<%= render :partial => "devise/registrations/new_registration_form_fields", :locals => { :f => f } %>
-<div class="form-group">
-	<div class="col-md-12 text-right text-right">
-		<%= f.submit "Inscription", class: "btn btn-styled btn-base-1" %>
+            <div class="card-body">
+              <%= link_to user_facebook_omniauth_authorize_path do%>
+              <div class="btn-lg btn-block btn-social btn-facebook">
+                <i class="fa fa-facebook"></i> Sign in with Facebook
+              </div>
+              <% end %><br>
+              <%= link_to user_google_oauth2_omniauth_authorize_path do%>
+              <div class="btn-lg btn-block btn-social btn-google">
+                <i class="fa fa-google"></i> Sign in with Google
+              </div>
+              <% end %><br>
+              <%= link_to user_twitter_omniauth_authorize_path do%>
+              <div class="btn-lg btn-block btn-social btn-twitter">
+                <i class="fa fa-twitter"></i> Sign in with Twitter
+              </div>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+		</div>
+
 	</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+
 </section>
+</body>
 <% end %>
