--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,8 +20,8 @@
 							<span>Créer un compte</span>
 							</h4>
 						</div>
-						
-						<div class="col-8">
+						<div class='row'>
+						<div class="col-md-6 mb-3">
 							<div class="form-group">
 								<%= f.label :Prénom %><br />
 								<div class="input-group input-group--style-1">
@@ -32,7 +32,7 @@
 						
 						
 						
-						<div class="col-8">
+						<div class="col-md-6 mb-3">
 							<div class="form-group">
 								<%= f.label :Nom %><br />
 								<div class="input-group input-group--style-1">
@@ -40,7 +40,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12">
+						<div class="col-md-6 mb-3">
 							<div class="form-group">
 								<%= f.label :Email %><br />
 								<div class="input-group input-group--style-1">
@@ -50,7 +50,7 @@
 						</div>
 						
 						
-						<div class="col-12">
+						<div class="col-md-6 mb-3">
 							<div class="form-group">
 								<%= f.label :Mot_de_passe %>
 								<% if @minimum_password_length %>
@@ -61,7 +61,7 @@
 								</div>
 							</div>
 						</div>
-						
+						</div>
 
 						
 						<div class="col-12">
