--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -19,25 +19,18 @@
               </h4>
             </div>
             <form class="form-default" role="form">
-              <div class="row">
-                <div class="col-12">
+              <div class="col">
+                <div class="align-items-center">
                   <div class="form-group">
                     <div class="input-group input-groupe--style-1">
                       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Votre email" %>
+                        <%= f.submit "Envoyer", class: "btn btn-styled btn-lg btn-block btn-base-1 mt-4"%>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-12">
-                </div>
-              </div>
-              <div class="row align-items-center">
-                  <%= f.submit "Envoyer", class: "btn btn-styled btn-lg btn-block btn-base-1 mt-4"%>
-              </div>
               <% end %>
               <%= render "devise/shared/links" %>
-
             </form>
           </div>
           </div>
