--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,5 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Déjà inscrit ? Connexion", new_session_path(resource_name), class: "link link-xs link--style-3" %><br />
+  <%= link_to "Déjà inscrit ?", new_session_path(resource_name), class: "link link-xs link--style-3" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
