--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,8 +8,12 @@
         <div class="form-card form-card--style-2 z-depth-2-top">
           <div class="form-header text-center">
             <div>
-              <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air" %><br>
-              <br>
+              <div>
+                <%= link_to root_path do %>
+                <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air", class:"mb-3" %>
+                <% end %><br>
+                <br>
+              </div>
             </div>
           </div>
           <div class="form-body">
